// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format is cjs buildType is bundle 1`] = `
"var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};
var __copyProps = (to, from, except, desc) => {
  if (from && typeof from === \\"object\\" || typeof from === \\"function\\") {
    for (let key of __getOwnPropNames(from))
      if (!__hasOwnProp.call(to, key) && key !== except)
        __defProp(to, key, { get: () => from[key], enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });
  }
  return to;
};
var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);
var stdin_exports = {};
__export(stdin_exports, {
  default: () => e
});
module.exports = __toCommonJS(stdin_exports);
var d = (a, r) => \`\${a}\${r}\`, e = (a) => d(\\"DEBUG:\\", a);
"
`;

exports[`format is cjs buildType is bundleless 1`] = `
"var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};
var __copyProps = (to, from, except, desc) => {
  if (from && typeof from === \\"object\\" || typeof from === \\"function\\") {
    for (let key of __getOwnPropNames(from))
      if (!__hasOwnProp.call(to, key) && key !== except)
        __defProp(to, key, { get: () => from[key], enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });
  }
  return to;
};
var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);
var stdin_exports = {};
__export(stdin_exports, {
  default: () => src_default
});
module.exports = __toCommonJS(stdin_exports);
var import_utils = require(\\"./utils\\");
var src_default = (str) => (0, import_utils.addPrefix)(\\"DEBUG:\\", str);
"
`;

exports[`format is cjs buildType is bundleless 2`] = `
"var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};
var __copyProps = (to, from, except, desc) => {
  if (from && typeof from === \\"object\\" || typeof from === \\"function\\") {
    for (let key of __getOwnPropNames(from))
      if (!__hasOwnProp.call(to, key) && key !== except)
        __defProp(to, key, { get: () => from[key], enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });
  }
  return to;
};
var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);
var stdin_exports = {};
__export(stdin_exports, {
  addPrefix: () => addPrefix
});
module.exports = __toCommonJS(stdin_exports);
const addPrefix = (prefix, str) => \`\${prefix}\${str}\`;
"
`;

exports[`format is esm buildType is bundle 1`] = `
"var d=(a,r)=>()=>(a&&(r=a(a=0)),r),e=(a,r)=>()=>(r||a((r={exports:{}}).exports,r),r.exports),o=d(()=>{}),p=e((a,r)=>{o();var t=(x,v)=>\`\${x}\${v}\`;r.exports={addPrefix:t}}),s=e((a,r)=>{o();var{addPrefix:t}=p();r.exports=x=>t(\\"DEBUG:\\",x)});export default s();
"
`;

exports[`format is esm buildType is bundleless 1`] = `
"var __getOwnPropNames = Object.getOwnPropertyNames;
var __esm = (fn, res) => function __init() {
  return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;
};
var __commonJS = (cb, mod) => function __require() {
  return mod || (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod), mod.exports;
};
var init_define_import_meta_env = __esm({
  \\"<define:import.meta.env>\\"() {
  }
});
var require_src = __commonJS({
  \\"src/index.js\\"(exports, module) {
    init_define_import_meta_env();
    const { addPrefix } = require(\\"./utils\\");
    module.exports = (str) => addPrefix(\\"DEBUG:\\", str);
  }
});
export default require_src();
"
`;

exports[`format is esm buildType is bundleless 2`] = `
"var __getOwnPropNames = Object.getOwnPropertyNames;
var __esm = (fn, res) => function __init() {
  return fn && (res = (0, fn[__getOwnPropNames(fn)[0]])(fn = 0)), res;
};
var __commonJS = (cb, mod) => function __require() {
  return mod || (0, cb[__getOwnPropNames(cb)[0]])((mod = { exports: {} }).exports, mod), mod.exports;
};
var init_define_import_meta_env = __esm({
  \\"<define:import.meta.env>\\"() {
  }
});
var require_utils = __commonJS({
  \\"src/utils.js\\"(exports, module) {
    init_define_import_meta_env();
    const addPrefix = (prefix, str) => \`\${prefix}\${str}\`;
    module.exports = {
      addPrefix
    };
  }
});
export default require_utils();
"
`;

exports[`format is iife buildType is bundle 1`] = `
"(() => {
  var d = (a, r) => () => (a && (r = a(a = 0)), r);
  var e = (a, r) => () => (r || a((r = { exports: {} }).exports, r), r.exports);
  var o = d(() => {
  });
  var p = e((a, r) => {
    o();
    var t = (x, v) => \`\${x}\${v}\`;
    r.exports = { addPrefix: t };
  });
  var s = e((a, r) => {
    o();
    var { addPrefix: t } = p();
    r.exports = (x) => t(\\"DEBUG:\\", x);
  });
  var stdin_default = s();
})();
"
`;

exports[`format is umd buildType is bundle 1`] = `
"(function (global, factory) {
  if (typeof define === \\"function\\" && define.amd) {
    define(\\"/Users/bytedance/github/targeral/modern-dev/packages/solutions/module-tools-v2/tests/fixtures/format/umd/dist/bundle/index\\", [\\"exports\\"], factory);
  } else if (typeof exports !== \\"undefined\\") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.UsersBytedanceGithubTargeralModernDevPackagesSolutionsModuleToolsV2TestsFixturesFormatUmdDistBundleIndex = mod.exports;
  }
})(typeof globalThis !== \\"undefined\\" ? globalThis : typeof self !== \\"undefined\\" ? self : this, function (_exports) {
  \\"use strict\\";

  Object.defineProperty(_exports, \\"__esModule\\", {
    value: true
  });
  _exports.default = void 0;

  var d = (a, r) => () => (a && (r = a(a = 0)), r),
      e = (a, r) => () => (r || a((r = {
    exports: {}
  }).exports, r), r.exports),
      o = d(() => {}),
      p = e((a, r) => {
    o();

    var t = (x, v) => \`\${x}\${v}\`;

    r.exports = {
      addPrefix: t
    };
  }),
      s = e((a, r) => {
    o();
    var {
      addPrefix: t
    } = p();

    r.exports = x => t(\\"DEBUG:\\", x);
  });

  var _default = s();

  _exports.default = _default;
});"
`;
